--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -171,9 +171,19 @@
 {%- style -%}
   :root {
     {% if section.settings.color_scheme.id == 'scheme-1' %}
-      --button-secondary-bg: #8EC2C9;
+      --button-secondary-bg: 142, 194, 201;
       .banner__buttons .button:nth-child(2) {
-        background-color: var(--button-secondary-bg);
+        background-color: rgb(var(--button-secondary-bg));
+      }
+      .banner__buttons .button:nth-child(2)::after {
+        box-shadow: 0 0 0 rgba(var(--button-secondary-bg)) !important;
+      }
+      /* Add hover state for the second button */
+      .banner__buttons .button:nth-child(2):hover {
+        background-color: rgba(var(--button-secondary-bg), 0.8);
+      }
+      .banner__buttons .button:nth-child(2)::after:hover {
+        box-shadow: 0 0 0 rgba(var(--button-secondary-bg), 0.8) !important;
       }
     {% endif %}
   }
