--- a/sections/blog-list.liquid
+++ b/sections/blog-list.liquid
@@ -62,29 +62,29 @@
   </div>
 </div>
 {% schema %}
-    {
-        "name": "Blog list",
-        "settings": [
-            {
-                "type": "range",
-                "id": "padding_top",
-                "label": "Padding Top",
-                "min": 0,
-                "max": 100,
-                "step": 1,
-                "unit": "px",
-                "default": 64
-            },
-            {
-                "type": "range",
-                "id": "padding_bottom",
-                "label": "Padding Bottom",
-                "min": 0,
-                "max": 100,
-                "step": 1,
-                "unit": "px",
-                "default": 64
-            }
-        ]
-    }
+{
+    "name": "CL Blog list",
+    "settings": [
+        {
+            "type": "range",
+            "id": "padding_top",
+            "label": "Padding Top",
+            "min": 0,
+            "max": 100,
+            "step": 1,
+            "unit": "px",
+            "default": 64
+        },
+        {
+            "type": "range",
+            "id": "padding_bottom",
+            "label": "Padding Bottom",
+            "min": 0,
+            "max": 100,
+            "step": 1,
+            "unit": "px",
+            "default": 64
+        }
+    ]
+}
 {% endschema %}
