added some presets to make them appear in the template UI

--- a/sections/blog-list.liquid
+++ b/sections/blog-list.liquid
@@ -85,6 +85,11 @@
             "unit": "px",
             "default": 64
         }
+    ],
+    "presets": [
+        {
+            "name": "CL Blog list"
+        }
     ]
 }
 {% endschema %}
