--- a/sections/ingredient-index.liquid
+++ b/sections/ingredient-index.liquid
@@ -63,6 +63,11 @@
             "unit": "px",
             "default": 64
         }
+    ],
+    "presets": [
+        {
+            "name": "Ingredient Index"
+        }
     ]
 }
 {% endschema %}
