--- a/assets/app.css
+++ b/assets/app.css
@@ -345,14 +345,11 @@ form#bh-sl-user-location .scasl-search-btn {
 
 /** Product cards **/
 
-.card__information {
+.product-card-wrapper .card__information {
   display: flex;
   height: 100%;
   flex-direction: column;
   justify-content: space-between;
-}
-
-.card__content {
 }
 
 .collection__title {
@@ -1184,6 +1181,10 @@ ol {
   margin-left: 2rem;
 }
 
+.twcss-mr-1 {
+  margin-right: 0.25rem;
+}
+
 .twcss-mt-0 {
   margin-top: 0px;
 }
@@ -1192,32 +1193,20 @@ ol {
   margin-top: 2rem;
 }
 
-.twcss-mr-4 {
-  margin-right: 1rem;
-}
-
-.twcss-mb-10 {
-  margin-bottom: 2.5rem;
-}
-
-.twcss-mb-14 {
-  margin-bottom: 3.5rem;
-}
-
-.twcss-mb-32 {
-  margin-bottom: 8rem;
-}
-
-.twcss-mr-1 {
-  margin-right: 0.25rem;
-}
-
 .twcss-flex {
   display: flex;
 }
 
 .twcss-hidden {
   display: none;
+}
+
+.twcss-h-\[300px\] {
+  height: 300px;
+}
+
+.twcss-min-h-\[300px\] {
+  min-height: 300px;
 }
 
 .twcss-w-full {
@@ -1283,10 +1272,6 @@ ol {
 
 .twcss-pr-3 {
   padding-right: 0.75rem;
-}
-
-.twcss-pb-32 {
-  padding-bottom: 8rem;
 }
 
 .twcss-text-right {
