--- a/sections/button-nav.liquid
+++ b/sections/button-nav.liquid
@@ -1,4 +1,4 @@
-<div class=''>
+<div class='page-width page-width--narrow'>
     <div class=''>
         {% if section.blocks.size > 0 %}
             {% for block in section.blocks %}
