Added page title

--- a/sections/button-nav.liquid
+++ b/sections/button-nav.liquid
@@ -36,6 +36,12 @@
             "unit": "px",
             "default": 64
 
+        },
+        {
+            "type": "text",
+            "id": "page_title",
+            "label": "Page Title",
+            "default": "Your Default Title"
         }
     ],
     "blocks": [
