--- a/sections/button-nav.liquid
+++ b/sections/button-nav.liquid
@@ -1,10 +1,20 @@
+{{ 'section-main-page.css' | asset_url | stylesheet_tag }}
+{{ 'section-button-nav.css' |  asset_url |  stylesheet_tag }}
 <div class='page-width page-width--narrow'>
-    <div class=''>
+    <div class="twcss-py-[28px]">
+    {% if section.settings.page_title != blank %}
+        <h1 class="main-page-title page-title h0 scroll-trigger animate--fade-in ">{{ section.settings.page_title |  escape }}</h1>
+    {% endif %}
+    </div>
+</div>
+<div class='page-width page-width--narrow button-nav'>
+    <div class="twcss-flex twcss-gap-8 twcss-justify-center twcss-overflow-x-auto twcss-whitespace-nowrap">
         {% if section.blocks.size > 0 %}
             {% for block in section.blocks %}
                 {% if block.settings.menu != blank %}
+                    {% assign current_url = request.path %}
                     {% for link in linklists[block.settings.menu].links %}
-                        <a href="{{ link.url }}" class="button button--secondary {% unless forloop.last %} twcss-border-r twcss-border-gray-300 twcss-pr-3 {% endunless %}">{{ link.title }}</a>
+                        <a href="{{ link.url }}" class="button button--secondary{% unless forloop.last %} twcss-border-r twcss-border-gray-300 twcss-pr-3 {% endunless %} {% if link.url == current_url %}active{% endif %}">{{ link.title }}</a>
                     {% endfor %}
                 {% endif %}
             {% endfor %}
