--- a/sections/cl-slideshow.liquid
+++ b/sections/cl-slideshow.liquid
@@ -241,7 +241,7 @@
     var flkty = new Flickity(elem, {
       cellSelector: '.cl-slideshow__slide',
       wrapAround: true,
-      setGallerySize: false,
+      setGallerySize: true,
       prevNextButtons: false, // Disable default prev/next buttons
       pageDots: false // Disable default dots
     });
