--- a/sections/main-article.liquid
+++ b/sections/main-article.liquid
@@ -56,7 +56,7 @@
               <span class="twcss-normal-case">by {{ article.metafields.blog_post.author.value.name }}</span>
             {%- endif %}
           </span>
-          <h1 class="hxl" >
+          <h1 class="h1" >
             {{ article.title | escape }}
           </h1>
         </header>
