--- a/assets/app.css
+++ b/assets/app.css
@@ -1203,6 +1203,26 @@ ol {
   margin-right: 0.5rem;
 }
 
+.twcss-mx-8 {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
+.twcss-mx-16 {
+  margin-left: 4rem;
+  margin-right: 4rem;
+}
+
+.twcss-mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.twcss-mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
 .twcss-ml-8 {
   margin-left: 2rem;
 }
@@ -1219,6 +1239,10 @@ ol {
   margin-top: 2rem;
 }
 
+.twcss-mb-4 {
+  margin-bottom: 1rem;
+}
+
 .twcss-inline-block {
   display: inline-block;
 }
@@ -1233,6 +1257,22 @@ ol {
 
 .twcss-h-\[300px\] {
   height: 300px;
+}
+
+.twcss-min-h-\[32px\] {
+  min-height: 32px;
+}
+
+.twcss-min-h-\[35px\] {
+  min-height: 35px;
+}
+
+.twcss-min-h-\[40px\] {
+  min-height: 40px;
+}
+
+.twcss-min-h-\[46\.8px\] {
+  min-height: 46.8px;
 }
 
 .twcss-w-full {
@@ -1259,24 +1299,16 @@ ol {
   gap: 2rem;
 }
 
+.twcss-gap-16 {
+  gap: 4rem;
+}
+
 .twcss-overflow-x-auto {
   overflow-x: auto;
 }
 
 .twcss-whitespace-nowrap {
   white-space: nowrap;
-}
-
-.twcss-rounded {
-  border-radius: 0.25rem;
-}
-
-.twcss-rounded-md {
-  border-radius: 0.375rem;
-}
-
-.twcss-rounded-lg {
-  border-radius: 0.5rem;
 }
 
 .twcss-rounded-xl {
@@ -1329,6 +1361,16 @@ ol {
   padding-bottom: 28px;
 }
 
+.twcss-px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.twcss-py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .twcss-pb-16 {
   padding-bottom: 4rem;
 }
@@ -1345,6 +1387,10 @@ ol {
   padding-right: 0.75rem;
 }
 
+.twcss-pb-12 {
+  padding-bottom: 3rem;
+}
+
 .twcss-text-right {
   text-align: right;
 }
@@ -1356,11 +1402,6 @@ ol {
 
 .twcss-text-xl {
   font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.twcss-text-lg {
-  font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
@@ -1396,6 +1437,11 @@ ol {
 }
 
 @media (min-width: 750px) {
+  .md\:twcss-mx-2 {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
+
   .md\:twcss-block {
     display: block;
   }
