--- a/snippets/cl-article-card.liquid
+++ b/snippets/cl-article-card.liquid
@@ -57,10 +57,10 @@
                   {%- if article.image.src.width >= 720 -%}{{ article.image.src | image_url: width: 720 }} 720w,{%- endif -%}
                   {%- if article.image.src.width >= 1000 -%}{{ article.image.src | image_url: width: 1000 }} 1000w,{%- endif -%}
                   {%- if article.image.src.width >= 1500 -%}{{ article.image.src | image_url: width: 1500 }} 1500w,{%- endif -%}
-                  {{ article.image.src | image_url }} {{ article.image.src.width }}w
+                  {{ article.image.src | image_url }} {{ article.image.src.width }}
                 "
                 src="{{ article.image.src | image_url: width: 533 }}"
-                sizes="(min-width: {{ settings.page_width }}px) {{ settings.page_width | minus: 100 | divided_by: 2 }}px, (min-width: 750px) calc((100vw - 130px) / 2), calc((100vw - 50px) / 2)"
+                sizes=""
                 alt="{{ article.image.src.alt | escape }}"
                 class="motion-reduce twcss-rounded-xl"
                 {% unless lazy_load == false %}
@@ -90,7 +90,7 @@
             </h3>
             {%- if show_excerpt -%}
               {%- if article.excerpt.size > 0 or article.content.size > 0 -%}
-                <p class="article-card__excerpt rte-width">
+                <p class="article-card__excerpt">
                   {%- if article.excerpt.size > 0 -%}
                     {{ article.excerpt | strip_html | truncatewords: 30 }}
                   {%- else -%}
@@ -122,14 +122,14 @@
               <span class="twcss-text-2xl twcss-normal-case">By {{ article.metafields.blog_post.author.value.name }}</span>
             {%- endif -%}
           </div>
-          <h3 class="card__heading twcss-min-h-[46.8px]{% if show_excerpt %} h3{% endif %}">
+          <h3 class="card__heading md:twcss-min-h-[46.8px]{% if show_excerpt %} h3{% endif %}">
             <a href="{{ article.url }}" class="full-unstyled-link">
               {{ article.title | truncate: 50 | escape }}
             </a>
           </h3>
           {%- if show_excerpt -%}
             {%- if article.excerpt.size > 0 or article.content.size > 0 -%}
-              <p class="article-card__excerpt rte-width">
+              <p class="article-card__excerpt twcss-mb-4">
                 {%- if article.excerpt.size > 0 -%}
                   {{ article.excerpt | strip_html | truncatewords: 13 }}
                 {%- else -%}
