--- a/snippets/cl-article-card.liquid
+++ b/snippets/cl-article-card.liquid
@@ -145,7 +145,7 @@
           {%- endif -%}
           <div class="twcss-flex twcss-items-end">
             <span class="link twcss-mr-1">Read article</span>
-            {% render 'icon-arrow' %}
+            <span class="lg:twcss-mb-[1px] xl:twcss-mb-[2px]">{% render 'icon-arrow' %}</span>
           </div>
         </div>
         {%- if show_badge -%}
